# rvo

./: CMakeLists.txt  bad_copy_buffer.cpp  bad_copy_buffer.h  bad_copy_buffer_test.cpp  copyable_buffer.cpp  copyable_buffer.h  copyable_buffer_test.cpp  main.cpp  string_holder.cpp  string_holder_test.cpp
include/: bad_copy_buffer.h  copyable_buffer.h  string_holder.h
